fixed a bug in renderSinglePlayer() by togglingVisibilty to flex. Minor style improvements

--- a/styles.css
+++ b/styles.css
@@ -4,12 +4,6 @@
   box-sizing: border-box;
 }
 
-h1 {
-  display: flex;
-  flex-flow: column wrap;
-  align-content: flex-start;
-}
-
 button {
   margin: 2px 0px;
   border-radius: 5%;
@@ -22,7 +16,7 @@ p {
 
 img {
   border-radius: 5%;
-  max-width: 100%;
+  width: 100%;
   max-height: 100%;
 }
 
@@ -66,7 +60,9 @@ img {
 
 .player-details {
   display: flex;
-  flex-flow: column nowrap;
+  flex-direction: column;
+  justify-content: space-between;
+  
   background-color: snow;
   width: 100%;
   padding: 20px;
